gitops/java-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-api
  labels:
    app: java-api
spec:
  selector:
    app: java-api
  ports:
    - name: http
      port: 80
      targetPort: http
